syntax = "proto3";
package comdex.asset.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message AppMapping {
    uint64 id      = 1;
    string name    = 2 [ (gogoproto.moretags) = "yaml:\"name\"" ];
    string short_name   = 3 [ (gogoproto.moretags) = "yaml:\"short_name\"" ];
    repeated MintGenesisToken mint_genesis_token = 4 [ (gogoproto.moretags) = "yaml:\"mint_genesis_token\"" ];
}

message MintGenesisToken {
    uint64 asset_id = 1;
    uint64 genesis_supply = 2;
    bool isgovToken = 3;
    string sender = 4;
}
// base gov ----- mint asset-----------app mapping id, asset id , 