syntax = "proto3";
package comdex.tokenmint.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "comdex/tokenmint/v1beta1/mint.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/comdex-official/comdex/x/tokenmint/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;


message QueryAllTokenMintedForAllProductsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllTokenMintedForAllProductsResponse {
  repeated TokenMint tokenMint = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"tokenMint\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedByProductRequest {
  uint64 app_id   = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedByProductResponse {
  TokenMint tokenMint = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"tokenMint\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedByProductAndAssetRequest {
  uint64 app_id   = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id   = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedByProductAndAssetResponse {
  MintedTokens mintedTokens = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"mintedTokens\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}



service Query {

  rpc QueryAllTokenMintedForAllProducts(QueryAllTokenMintedForAllProductsRequest) returns (QueryAllTokenMintedForAllProductsResponse) {
    option (google.api.http).get = "/comdex/tokenmint/v1beta1/total-token-minted-all-products";
  }

  rpc QueryTokenMintedByProduct(QueryTokenMintedByProductRequest) returns (QueryTokenMintedByProductResponse) {
    option (google.api.http).get = "/comdex/tokenmint/v1beta1/token-minted-by-product/{app_id}";
  }
  rpc QueryTokenMintedByProductAndAsset(QueryTokenMintedByProductAndAssetRequest) returns (QueryTokenMintedByProductAndAssetResponse) {
    option (google.api.http).get = "/comdex/tokenmint/v1beta1/token-minted-by-product-asset/{app_id}/{asset_id}";
  }

}
