syntax = "proto3";
package comdex.vault.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/vault/v1beta1/vault.proto";

option go_package            = "github.com/comdex-official/comdex/x/vault/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message VaultInfo{
  string id = 1;
  uint64 pair_id = 2 [
    (gogoproto.customname) = "PairID",
    (gogoproto.moretags)   = "yaml:\"pair_id\""
  ];
  string owner     = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

  string collateral = 4 [
    (gogoproto.moretags) = "yaml:\"collateral\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  string debt = 5 [
    (gogoproto.moretags) = "yaml:\"debt\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  string collateralization_ratio = 6 [
    (gogoproto.moretags) = "yaml:\"collateralization_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message QueryVaultRequest {
  string id = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryVaultResponse {
  Vault vault = 1[
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryVaultInfoRequest {
  string id    = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryVaultInfoResponse {
  VaultInfo vaultsInfo = 1 [
    (gogoproto.customname) = "VaultsInfo",
    (gogoproto.moretags)   = "yaml:\"vaultsInfo\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryAllVaultsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsResponse {
  repeated Vault vault = 1 [
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsByProductRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryAllVaultsByProductResponse {
  repeated Vault vault = 1 [
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsByAppAndExtendedPairRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultsByAppAndExtendedPairResponse {
  repeated Vault vault = 1 [
    (gogoproto.moretags)   = "yaml:\"vault\"",
    (gogoproto.nullable)   = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultOfOwnerByExtendedPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 extended_pair_id = 3 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 4
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultOfOwnerByExtendedPairResponse {
  string vault_Id = 1 [ (gogoproto.moretags) = "yaml:\"vault_Id\"" ];
}

message QueryVaultByProductRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultByProductResponse {
  repeated string vault_Ids = 1 [ (gogoproto.moretags) = "yaml:\"vault_Ids\"" ];
}

message QueryAllVaultByOwnerRequest {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAllVaultByOwnerResponse {
  repeated string vault_Ids = 1 [ (gogoproto.moretags) = "yaml:\"vault_Ids\"" ];
}

message QueryTokenMintedAllProductsByPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedAllProductsByPairResponse {
  string token_Minted = 1 [ 
  (gogoproto.moretags) = "yaml:\"token_Minted\"",
  (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int" ];
}

message QueryTokenMintedAllProductsRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTokenMintedAllProductsResponse {
  string token_Minted = 1 [ 
  (gogoproto.moretags) = "yaml:\"token_Minted\"",
  (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int" ];
}

message QueryVaultCountByProductRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultCountByProductResponse {
  uint64 vault_count = 1 [ 
  (gogoproto.moretags) = "yaml:\"vault_count\""];
}

message QueryVaultCountByProductAndPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryVaultCountByProductAndPairResponse {
  uint64 vault_count = 1 [ 
  (gogoproto.moretags) = "yaml:\"vault_count\""];
}

message QueryTotalValueLockedByProductExtendedPairRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryTotalValueLockedByProductExtendedPairResponse {
  string value_locked = 1 [ 
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int" ];
}

message QueryExtendedPairIDByProductRequest {
  uint64 product_id = 1 [ (gogoproto.moretags) = "yaml:\"product_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryExtendedPairIDByProductResponse {
  repeated uint64 extended_pair_ids = 1 [ (gogoproto.moretags) = "yaml:\"extended_pair_ids\"" ];
}

message QueryStableVaultInfoRequest {
  string stable_vault_id = 1 [ (gogoproto.moretags) = "yaml:\"stable_vault_id\"" ];
}

message QueryStableVaultInfoResponse {
  StableMintVault stable_mint_vault = 1 [ (gogoproto.moretags) = "yaml:\"stable_mint_vault\"" ];
}

message QueryAllStableVaultsRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryAllStableVaultsResponse {
  repeated StableMintVault stable_mint_vault = 1 [ (gogoproto.moretags) = "yaml:\"stable_mint_vault\"" ];
}

message QueryStableVaultByProductExtendedPairRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
}

message QueryStableVaultByProductExtendedPairResponse {
  StableMintVault stable_mint_vault = 1 [ (gogoproto.moretags) = "yaml:\"stable_mint_vault\"" ];
}

message QueryExtendedPairVaultMappingByAppAndExtendedPairIdRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair_id = 2 [ (gogoproto.moretags) = "yaml:\"extended_pair_id\"" ];
}

message QueryExtendedPairVaultMappingByAppAndExtendedPairIdResponse {
 ExtendedPairVaultMapping extendedPairVaultMapping = 1 [ (gogoproto.moretags) = "yaml:\"extendedPairVaultMapping\"" ];
}

message QueryExtendedPairVaultMappingByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryExtendedPairVaultMappingByAppResponse {
 repeated ExtendedPairVaultMapping extendedPairVaultMapping = 1 [ (gogoproto.moretags) = "yaml:\"extendedPairVaultMapping\"" ];
}

message QueryExtendedPairVaultMappingByOwnerAndAppRequest {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 app_id = 2 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryExtendedPairVaultMappingByOwnerAndAppResponse {
 repeated ExtendedPairToVaultMapping extendedPairtoVaultMapping = 1 [ (gogoproto.moretags) = "yaml:\"extendedPairtoVaultMapping\"" ];
}

message QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDRequest {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 app_id = 2 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 extended_pair = 3 [ (gogoproto.moretags) = "yaml:\"extended_pair\"" ];

}

message QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDResponse {
string vaultId = 1 [ (gogoproto.moretags) = "yaml:\"vaultId\"" ];
}

message QueryTVLlockedByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];

}

message QueryTVLlockedByAppResponse {
repeated TvlLockedDataMap tvldata = 1 [ (gogoproto.moretags) = "yaml:\"tvldata\"" ];
}


service Query {
  rpc QueryVault(QueryVaultRequest) returns (QueryVaultResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults/{id}";
  };

  rpc QueryVaultInfo(QueryVaultInfoRequest) returns (QueryVaultInfoResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaultsInfo/{id}";
  };

  rpc QueryAllVaults(QueryAllVaultsRequest) returns (QueryAllVaultsResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults";
  };
  rpc QueryAllVaultsByProduct(QueryAllVaultsByProductRequest) returns (QueryAllVaultsByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults-by-product/{app_id}";
  };
  rpc QueryAllVaultsByAppAndExtendedPair(QueryAllVaultsByAppAndExtendedPairRequest) returns (QueryAllVaultsByAppAndExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults-by-app-and-extended-pair/{app_id}/{extended_pair_id}";
  };

  rpc QueryVaultOfOwnerByExtendedPair(QueryVaultOfOwnerByExtendedPairRequest) returns (QueryVaultOfOwnerByExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vault-of-owner-by-extended-pair/{product_id}/{owner}/{extended_pair_id}";
  };

  rpc QueryVaultByProduct(QueryVaultByProductRequest) returns (QueryVaultByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairvaults-by-product/{product_id}";
  };

  rpc QueryAllVaultByOwner(QueryAllVaultByOwnerRequest) returns (QueryAllVaultByOwnerResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vaults-by-owner/{owner}";
  };

  rpc QueryTokenMintedAllProductsByPair(QueryTokenMintedAllProductsByPairRequest) returns (QueryTokenMintedAllProductsByPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/token-minted-by-products-extended-pair/{product_id}/{extended_pair_id}";
  };

  rpc QueryTokenMintedAllProducts(QueryTokenMintedAllProductsRequest) returns (QueryTokenMintedAllProductsResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/token-minted-by-products/{product_id}";
  };

  rpc QueryVaultCountByProduct(QueryVaultCountByProductRequest) returns (QueryVaultCountByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vault-count-by-products/{product_id}";
  };

  rpc QueryVaultCountByProductAndPair(QueryVaultCountByProductAndPairRequest) returns (QueryVaultCountByProductAndPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/vault-count-by-products-and-pair/{product_id}/{extended_pair_id}";
  };

  rpc QueryTotalValueLockedByProductExtendedPair(QueryTotalValueLockedByProductExtendedPairRequest) returns (QueryTotalValueLockedByProductExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/value-locked-by-product-pair/{product_id}/{extended_pair_id}";
  };

  rpc QueryExtendedPairIDByProduct(QueryExtendedPairIDByProductRequest) returns (QueryExtendedPairIDByProductResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/external-pair-by-product/{product_id}";
  };

  rpc QueryStableVaultInfo(QueryStableVaultInfoRequest) returns (QueryStableVaultInfoResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/stable-vault-by-id/{stable_vault_id}";
  };

  rpc QueryAllStableVaults(QueryAllStableVaultsRequest) returns (QueryAllStableVaultsResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/stable-vault-by-product/{app_id}";
  };

  rpc QueryStableVaultByProductExtendedPair(QueryStableVaultByProductExtendedPairRequest) returns (QueryStableVaultByProductExtendedPairResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/stable-vault-by-product-extendedPair/{app_id}/{extended_pair_id}";
  };
  
  rpc QueryExtendedPairVaultMappingByAppAndExtendedPairId(QueryExtendedPairVaultMappingByAppAndExtendedPairIdRequest) returns (QueryExtendedPairVaultMappingByAppAndExtendedPairIdResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-product-and-ExtendedPairId/{app_id}/{extended_pair_id}";
  };

  rpc QueryExtendedPairVaultMappingByApp(QueryExtendedPairVaultMappingByAppRequest) returns (QueryExtendedPairVaultMappingByAppResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-product/{app_id}";
  };

  rpc QueryExtendedPairVaultMappingByOwnerAndApp(QueryExtendedPairVaultMappingByOwnerAndAppRequest) returns (QueryExtendedPairVaultMappingByOwnerAndAppResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-owner-and-product/{owner}/{app_id}";
  };

  rpc QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairID(QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDRequest) returns (QueryExtendedPairVaultMappingByOwnerAndAppAndExtendedPairIDResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/extendedPairVault-by-owner-product-extendedPair/{owner}/{app_id}/{extended_pair}";
  };

  rpc QueryTVLlockedByApp(QueryTVLlockedByAppRequest) returns (QueryTVLlockedByAppResponse) {
    option (google.api.http).get = "/comdex/vault/v1beta1/tvl-locked-by-app/{app_id}";
  };
}